--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="ok">Ok</string>
+    <string name="qad">lskbdng ojw</string>
+    <string name="list_of_all_sensors">List of All Sensors</string>
+    <string name="accel">Accel</string>
+    <string name="gyros">Gyros</string>
+    <string name="light">Light</string>
+    <string name="magne">Magne</string>
 </resources>
